--- a/index.html
+++ b/index.html
@@ -6,30 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Production Support 2565-2</title>
   </head>
-  <body>
+  <body class="h-screen">
     <div
-      class="bg-gray-100 h-60 bg-[url('https://picsum.photos/1920/500')] relative"
+      class="bg-gray-100 h-1/3 bg-[url('https://picsum.photos/1920/500')] relative"
     >
       <div
-        class="absolute bottom-0 left-0 right-0 top-0 bg-gradient-to-r from-red-500 to-blue-500 opacity-70 p-4"
+        class="absolute inset-0 bg-gradient-to-r from-red-500/70 to-blue-500/70 p-4 z-10"
+      ></div>
+
+      <div
+        class="relative container mx-auto z-40 h-full flex items-center px-4"
       >
-        <div class="container mx-auto">
-          <div class="flex items-center h-60">
-            <div class="font-bold text-4xl text-white">
-              Blockchain for Industrial Engineer 2565-1
-            </div>
-          </div>
+        <div class="font-bold text-4xl text-white">
+          Blockchain for Industrial Engineer 2565-1
         </div>
       </div>
     </div>
     <div class="container mx-auto mt-2 flex gap-2 p-4">
       <div
-        class="cursor-pointer text-gray-600 p-2 border rounded-lg hover:bg-red-300 hover:text-white"
+        class="cursor-pointer text-gray-600 p-2 border rounded-lg hover:bg-red-300 hover:text-white transition-colors ease-in-out"
       >
         <a href="lectures" target="_blank">Lecture Presentation</a>
       </div>
       <div
-        class="cursor-pointer text-gray-600 p-2 border rounded-lg hover:bg-red-300 hover:text-white"
+        class="cursor-pointer text-gray-600 p-2 border rounded-lg hover:bg-red-300 hover:text-white transition-colors ease-in-out"
       >
         <a
           href="https://www.youtube.com/playlist?list=PLNGLpHQhvGrsfNasmb0rg3HUITB5S9Vsg"
