--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Production Support 2565-2</title>
+    <title>Blockchain Class 2565-2</title>
     <script type="module" crossorigin src="/assets/index.60732ff4.js"></script>
     <link rel="stylesheet" href="/assets/index.815b298a.css">
   </head>
